--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,3 +1,14 @@
 @import "vars";
 @import "fonts";
 
+body {
+  
+}
+ul{
+  margin: 0;
+  padding: 0;
+}
+a{
+  display: inline-block;
+  text-decoration: underline;
+}
