--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?9u78u1');
-  src:  url('fonts/icomoon.eot?9u78u1#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?9u78u1') format('truetype'),
-    url('fonts/icomoon.woff?9u78u1') format('woff'),
-    url('fonts/icomoon.svg?9u78u1#icomoon') format('svg');
+  src:  url('../fonts/icomoon.eot?9u78u1');
+  src:  url('../fonts/icomoon.eot?9u78u1#iefix') format('embedded-opentype'),
+    url('../fonts/icomoon.ttf?9u78u1') format('truetype'),
+    url('../fonts/icomoon.woff?9u78u1') format('woff'),
+    url('../fonts/icomoon.svg?9u78u1#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
