--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -2,3 +2,12 @@
 // font-family: 'Open Sans', sans-serif;
 // font-family: 'Raleway', sans-serif;
 // font-family: 'Roboto', sans-serif;
+
+// Colors
+$text: #546e7a;
+$orange: #e74c3c;
+$green:#8bc34a ;
+$fon: #263238;
+// Fonts
+$roboto: 'Roboto', sans-serif;
+$open: 'Open Sans', sans-serif;
