--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -1,8 +1,3 @@
-// font-family: 'Lato', sans-serif;
-// font-family: 'Open Sans', sans-serif;
-// font-family: 'Raleway', sans-serif;
-// font-family: 'Roboto', sans-serif;
-
 // Colors
 $text: #546e7a;
 $orange: #e74c3c;
@@ -11,3 +6,5 @@ $fon: #263238;
 // Fonts
 $roboto: 'Roboto', sans-serif;
 $open: 'Open Sans', sans-serif;
+$ral: 'Raleway', sans-serif;
+$lato: 'Lato', sans-serif;
